--- a/Bayesian DNA Barcode Gap.tex
+++ b/Bayesian DNA Barcode Gap.tex
@@ -78,7 +78,7 @@
 
 Since its inception over 20 years ago, DNA barcoding \citep{hebert2003biological, hebert2003barcoding} has emerged as a robust method of specimen identification and species delimitation across myriad \\ taxonomic groups which have been sequenced at short, standardized gene regions like 5'-COI for animals. However, the success of the approach, particularly for regulatory and forensic applications, depends crucially on two important factors: (1) the availability of high-quality specimen records found in public reference sequence databases such as the Barcode of Life Data Systems (BOLD) \citep{ratnasingham2007bold}, and (2) the establishment of a DNA barcode gap --- the idea that the maximum genetic distance observed within species is much smaller than the minimum degree of marker variation found among species \citep{meyer2005dna, meier2008use}. Early work has demonstrated that the presence of a DNA barcode gap hinges strongly on extant levels of species haplotype diversity gauged from comprehensive specimen sampling at wide geographic and ecological scales \citep{bergsten2012effect}. Despite this, many taxa lack adequate separation in their pairwise intraspecific and interspecific genetic distances, thereby compromising rapid matching of unknown samples to expertly-validated references.
 
-Recent work has argued that DNA barcoding, in its current form, is lacking in statistical rigor, calling into question the existence of a true species' DNA barcode gap \citep{phillips2022lack}. To support this notion, novel nonparametric locus-specific metrics based on the multispecies coalescent \citep{rannala2003bayes, yang2017bayesian} were recently outlined and shown to hold strong promise when applied to predatory \textit{Agabus} (Coleoptera: Dytiscidae) diving beetles \citep{phillips2024measure}, a group, which, despite their morphological \\ uniformity, sre considered to be a taxonomic nightmare. The coalescent \citep{kingman1982coalescent} \\ encompasses a backwards continuous-time stochastic Markov process of allelic sampling within natural, neutrally-evolving, species populations towards the Most Recent Common Ancestor (MRCA). The metrics quantify the extent of asymmetric directionality of \\ proportional genetic distance distribution overlap/separation for species within well-sampled taxonomic genera based on a straightforward distance count. The metrics can be employed in a variety of ways, including to assess performance of marker genes for species identication, as well as to assess whether computed values are consistent with population genetic-level parameters like effective population size ($N_e$), mutation rates ($\mu$) and divergence times ($\tau$) for species under study \citep{mather2019practical}. However, what appears to be missing is an unbiased way to compute the statistical accuracy of the recommended estimators arising through problems inherent in frequentist maximum likelihood estimation for discrete probability distributions having bounded positive support on [0, 1]. To this end, here, a Bayesian model of the DNA barcode gap coalescent is introduced to rectify such issues. The model allows accurate estimation of posterior means, posterior standard deviations, posterior quantiles, and credible intervals for the metrics given datasets of intraspecific and interspecific genetic distances for species of interest.
+Recent work has argued that DNA barcoding, in its current form, is lacking in statistical rigor, calling into question the existence of a true species' DNA barcode gap \citep{phillips2022lack}. To support this notion, novel nonparametric locus-specific metrics based on the multispecies coalescent \citep{rannala2003bayes, yang2017bayesian} were recently outlined and shown to hold strong promise when applied to predatory \textit{Agabus} (Coleoptera: Dytiscidae) diving beetles \citep{phillips2024measure}, a group, which, despite their morphological \\ uniformity, is considered to be a taxonomic nightmare \citep{bergsten2012effect}. Further, the metrics indicate that sister species pairs from this taxon are often difficult to distinguish on the basis of their DNA barcode sequences \citep{phillips2024measure}. The coalescent \citep{kingman1982coalescent} encompasses a backwards continuous-time stochastic Markov process of allelic sampling within natural, neutrally-evolving, species populations towards the Most Recent Common Ancestor (MRCA). The metrics quantify the extent of asymmetric directionality of \\ proportional genetic distance distribution overlap/separation for species within well-sampled taxonomic genera based on a straightforward distance count. The metrics can be employed in a variety of ways, including to assess performance of marker genes for species identication, as well as to assess whether computed values are consistent with population genetic-level parameters like effective population size ($N_e$), mutation rates ($\mu$) and divergence times ($\tau$) for species under study \citep{mather2019practical}. However, what appears to be missing is an unbiased way to compute the statistical accuracy of the recommended estimators arising through problems inherent in frequentist maximum likelihood estimation for probability distributions having bounded positive support on [0, 1]. To this end, here, a Bayesian model of the DNA barcode gap coalescent is introduced to rectify such issues. The model allows accurate estimation of posterior means, posterior standard deviations, posterior quantiles, and credible intervals for the metrics given datasets of intraspecific and interspecific genetic distances for species of interest.
 
 
 \section{Methods}
@@ -94,7 +94,7 @@ p'_x &= \frac{\#\{d_{ij} \geq a'\}}{\#\{d_{ij}\}} \\[1mm]
 q'_x &= \frac{\#\{d'_{XY} \leq b\}}{\#\{d'_{XY}\}}
 \end{align}
 
-\noindent where $d_{ij}$ are pairwise genetic distances within species, $d_{XY}$ are genetic distances among species for an entire genus of concern, and $d'_{XY}$ are combined interspecific distances for a target species and its closest neighbouring species. The notation \# reflects a count (\textbf{Figure 1}).  Quantities $a$, $a'$, and $b$ correspond to min($d_{XY}$), min($d'_{XY}$), and max($d_{ij}$), the minimum interspecific distance and the maximum intraspecific distance, respectively. Hence, Equations (1)-(4) are simply empirical means of genetic distances falling below or exceeding given distribution thresholds. Notice further that $a$/$a'$, and $b$ are also the first and $n$th order statistics, respectively. Genetic distances are easily computed from a model of DNA sequence evolution, such as uncorrected or corrected p-distances \citep{jukes1969evolution, kimura1980simple}. If a focal species is found to have multiple nearest neighbours, then the species possessing the smallest average pairwise interspecfic distance is used. While these schemes differ considerably from the usual definition of the DNA barcode gap laid out by \citet{meyer2005dna} and \citet{meier2008use}, they more accurately account for species' coalescence histories inferred from contemporaneous samples of DNA sequences, such as interspecific hybridization/introgression events \citep{phillips2024measure}. Note, distances (and hence the metrics) are constrained to the closed unit interval [0, 1]. Values of the estimators obtained from equations (1)-(4) close to or equal to zero give evidence for separation between intraspecific and interspecific genetic distance distributions; that is, values suggest the \\ presence of a DNA barcode gap for a target species. Conversely, values near or equal to one give evidence for distribution overlap; that is, values likely indicate the absence of a gap. Equations (1)-(4) can be expressed in terms of empirical cumulative distribution functions (ECDFs) (see \textbf{Supplementary Information} for details).
+\noindent where $d_{ij}$ are pairwise genetic distances within species, $d_{XY}$ are genetic distances among species for an entire genus of concern, and $d'_{XY}$ are combined interspecific distances for a target species and its closest neighbouring species. The notation \# reflects a count (\textbf{Figure 1}).  Quantities $a$, $a'$, and $b$ correspond to min($d_{XY}$), min($d'_{XY}$), and max($d_{ij}$), the minimum interspecific distance and the maximum intraspecific distance, respectively. Hence, Equations (1)-(4) are simply empirical means of genetic distances falling at and below, or at and exceeding given distribution thresholds. Notice further that $a$/$a'$, and $b$ are also the first and $n$th order statistics, respectively. Equations (1)-(4) can be also be expressed in terms of empirical cumulative distribution functions (ECDFs) (see \textbf{Supplementary Information} for details). Genetic distances are easily computed from a model of DNA sequence evolution, such as uncorrected or corrected p-distances \citep{jukes1969evolution, kimura1980simple}. If a focal species is found to have multiple nearest neighbours, then the species possessing the smallest average pairwise interspecific distance is used. While these schemes differ \\ considerably from the usual definition of the DNA barcode gap laid out by \citet{meyer2005dna} and \citet{meier2008use}, they more accurately account for species' coalescence histories inferred from contemporaneous samples of DNA sequences, such as interspecific hybridization/introgression events \citep{phillips2024measure}. Note, genetic distances are \\ constrained to the closed unit interval [0, 1], whereas the metrics are defined only on [$a$/$a'$, b]. Values of the estimators obtained from equations (1)-(4) close to or equal to zero give evidence for separation between \\ intraspecific and interspecific genetic distance distributions; that is, values suggest the \\ presence of a DNA barcode gap for a target species. Conversely, values near or equal to one give evidence for distribution overlap; that is, values likely indicate the absence of a gap. 
 
 \subsection{A Bayesian Implementation}
 
@@ -108,7 +108,7 @@ A major criticism of large sample (frequentist) theory is that it relies on asym
 
 \subsection{The Model}
 
-Essentially, from a statistical perspective, the goal herein is to nonparametrically estimate probabilities corresponding to extreme tail quantiles for positive highly skewed distributions on the unit interval. Here, it is sought to numerically approximate the extent of \\ overlap/separation of intraspecific and interspecific pairwise genetic distance distributions within the subinterval [$a$, $b$]. This is a challenging computational problem within the current study as detailed in subsequent sections. The usual approach employs Kernel Density Estimation (KDE), along with numerical integration; however, this requires careful selection of the bandwidth parameter. Here, for simplicity, a different route is taken. Counts, $y$, of overlapping genetic distances (as expressed in the numerator of Equations (1)-(4)) are treated as binomially distributed with expectation $\mathbb{E}[Y] = k\theta$, where $k = \{N, C\}$ are total count vectors of intraspecific and combined genetic distances, respectively, for a target species along with its nearest neighbour species, and $k = M$ is a total count vector for all pairwise species comparisons. The quantity $\theta = \{p_x, q_x, p^{'}_x, q^{'}_x\}$. The metrics encompassing $\theta$ are presumed to follow a beta($\alpha$, $\beta$) distribution, with real shape parameters $\alpha$ and $\beta$, which is a natural choice of prior on probabilities. Such a scheme is quite convenient since the beta distribution is conjugate to the binomial distribution. Thus, the posterior distribution is also beta distributed. Parameters were given an uninformative Beta(1, 1) prior, which is equivalent to a standard uniform (Uniform(0, 1)) prior since it places equal probability on all parameter values within its support. As a result, the posterior is Beta($Y + 1$, $n - Y + 1$), from which various moments and other quantities, such as the expected value $\mathbb{E}[Y] = \frac{Y \hspace{0.5mm} + \hspace{0.5mm} 1}{n \hspace{0.5mm} + \hspace{0.5mm} 2}$ and variance $\mathbb{V}[Y] = \frac{(Y \hspace{0.5mm} + \hspace{0.5mm} 1)(n \hspace{0.5mm} - Y \hspace{0.5mm} + \hspace{0.5mm} 1)}{(n \hspace{0.5mm} + \hspace{0.5mm} 2)^2(n \hspace{0.5mm} + \hspace{0.5mm} 3)}$, can be easily calculated. In general however, when possible, it is always advisable to incorporate prior information, even if only weak, rather than simply imposing complete ignorance in the form of a flat prior distribution. With sufficient data, the choice of prior distribution becomes less important since the posterior will be dominated by the likelihood.  The full univariate Bayesian model for species $x$ is thus given by
+Essentially, from a statistical perspective, the goal herein is to nonparametrically estimate probabilities corresponding to extreme tail quantiles for positive highly skewed distributions on the unit interval, or any closed subinterval thereof). Here, it is sought to numerically approximate the extent of overlap/separation of intraspecific and interspecific pairwise genetic distance distributions within the subinterval [$a$, $b$]. This is a challenging computational problem within the current study as detailed in subsequent sections. The usual approach employs Kernel Density Estimation (KDE), along with numerical or Monte Carlo integration; however, this requires careful selection of the bandwidth parameter. Here, for simplicity, a different route is taken. Counts, $y$, of overlapping genetic distances (as expressed in the numerator of Equations (1)-(4)) are treated as binomially distributed with expectation $\mathbb{E}[Y] = k\theta$, where $k = \{N, C\}$ are total count vectors of intraspecific and combined genetic distances, respectively, for a target species along with its nearest neighbour species, and $k = M$ is a total count vector for all pairwise species comparisons. The quantity $\theta = \{p_x, q_x, p^{'}_x, q^{'}_x\}$. The metrics encompassing $\theta$ are presumed to follow a beta($\alpha$, $\beta$) distribution, with real shape parameters $\alpha$ and $\beta$, which is a natural choice of prior on probabilities. Such a scheme is quite convenient since the beta distribution is conjugate to the binomial distribution. Thus, the posterior distribution is also beta distributed. Parameters were given an uninformative Beta(1, 1) prior, which is equivalent to a standard uniform (Uniform(0, 1)) prior since it places equal probability on all parameter values within its support. As a result, the posterior is Beta($Y + 1$, $n - Y + 1$), from which various moments and other quantities, such as the expected value $\mathbb{E}[Y] = \frac{Y \hspace{0.5mm} + \hspace{0.5mm} 1}{n \hspace{0.5mm} + \hspace{0.5mm} 2}$ and variance $\mathbb{V}[Y] = \frac{(Y \hspace{0.5mm} + \hspace{0.5mm} 1)(n \hspace{0.5mm} - Y \hspace{0.5mm} + \hspace{0.5mm} 1)}{(n \hspace{0.5mm} + \hspace{0.5mm} 2)^2(n \hspace{0.5mm} + \hspace{0.5mm} 3)}$, can be easily calculated. In general however, when possible, it is always advisable to incorporate prior information, even if only weak, rather than simply imposing complete ignorance in the form of a flat prior distribution. With sufficient data, the choice of prior distribution becomes less important since the posterior will be dominated by the likelihood.  The full univariate Bayesian model for species $x$ is thus given by
 
 \begin{align}
 \notag y_\mathrm{lwr} &\sim \mathrm{Binomial}(N, p_\mathrm{lwr}) \\ 
