--- a/References.bib
+++ b/References.bib
@@ -10,8 +10,6 @@
   doi={10.1093/sysbio/sys037}
 }
 
-
-
 @article{carpenter2017stan,
 title = {Stan: {A} Probabilistic Programming Language},
 journal = {Journal of Statistical Software},
@@ -43,6 +41,18 @@ author = {Carpenter, B and Gelman, A and Hoffman, MD and Lee, D and Goodrich, B 
   year={2003},
   publisher={The Royal Society}
 }
+
+@article{hebert2004identification,
+  title={Identification of Birds through DNA Barcodes},
+  author={Hebert, Paul DN and Stoeckle, Mark Y and Zemlak, Tyler S and Francis, Charles M},
+  journal={PLoS Biol},
+  volume={2},
+  number={10},
+  pages={e312},
+  year={2004},
+  doi={10.1371/journal.pbio.0020312}
+}
+
 
 @article{hoffman2014no,
   title={The {N}o-{U}-{T}urn {S}ampler: {A}daptively Setting Path Lengths in {H}amiltonian {M}onte {C}arlo},
